# metamorphosed

./: .dockerignore  .gitignore  .gitmodules  AMR2UMR.py  AMR_relations.py  CHANGES.md  Dockerfile  LICENSE  MANIFEST.in  README.md  UMR.md  UMR2AMR.py  amr_comparison.py  amrdoc.py  amreditor.py  comptest_annot4.txt  comptest_gold.txt  comptest_sys.txt  concepts.txt  constraints.yml  coverageamr.txt  edge_predictor.py  gitinterface.py  graph.py  iaa.py  inter_annotator.py  metamorphosed_server.py  propbank_frames.py  pyproject.toml  reification-table-wiser.txt  reification-table.txt  reification.py  relations.txt  relations_constraints.py  requirements.txt  selenium_test.py  server.py  setup.py  smatch_pm.py  testamr.txt  (+6 more)
coref/: CHANGES.md  COREF.md  README.md  amrs2dot.py  corefeditor.py  corefinit.py  corefserver.py  ex.amr.txt  ex.amr.xml  pp.amr.txt  pp_001.xml  rename.sh  selenium_coreftest.py  shakespeare.amr.txt  ui-coreftest-results.xml  unittests.py  unittests_gui.py  welsh.amr.txt  wikipedia.shakespeare.xml  wikipedia.welsh.xml
data/: reification-table.txt
gui/: compare.html  compare.js  coref.css  coref.html  coref.js  index.css  index.html  index.js
metamorphosed/: AMR_relations.py  __init__.py  amr_comparison.py  amrdoc.py  amreditor.py  colorlist.py  edge_predictor.py  exception.py  findsubgraph.py  frequency_edge_predictor.py  gitinterface.py  graph.py  installJQ.py  inter_annotator.py  joingraphs.py  preferred_graph.py  propbank_frames.py  reification.py  relations_constraints.py  relations_doc.py  replacesubgraph.py  selenium_test.py  server.py  smatch_pm.py  umrdoc.py  unittests.py  version.py
metamorphosed/data/: alignments.amr-2umr.umr  alignments.amr.txt  comptest_annot1.txt  comptest_annot3.txt  concepts.txt  constraints.yml  docgraph.json  freq_edge_predictor.yml  graphs-to-join.txt  preferred.json  relations-doc.json  relations.txt  testamr.txt  testumr-2amr.txt  testumr-minimal-expected.umr  testumr-minimal.umr  testumr.umr  ui-test-results.txt  umr-reification-table.txt  umr-relations-doc.json  umr-relations.txt
metamorphosed/gui/: animated.css  animated.html  animation.js  compare.html  compare.js  coref.css  coref.js  index.css  index.html  index.js  utils.js
test/: comptest_annot2.txt
