#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[build-system]
requires = ["setuptools >=  59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metamorphosed"
dynamic = ["version"]
description = "A graphical Abstract Meaning Represention Editor"
readme = "README.md"
license = { file ="LICENSE" }
requires-python = "<4.0.0,>=3.12"
authors = [
    { name = "Johannes Heinecke", email = "johannes.heinecke@orange.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "Flask-Cors==5.0.1",
    "Flask==3.0.2",
    "GitPython==3.1.42",
    "graphviz==0.20.1",
    "Penman==1.3.0",
    "pytest==7.4.0",
    "PyYAML==6.0.1",
    "requests==2.32.4",
    "smatchpp==1.7.0",
    "werkzeug==3.0.6",
    "rdflib (==7.1.4)",
    "tox>=4.26.0",
    "oxrdflib>=0.4.0",
    "selenium>=4.33.0",
]

[project.scripts]
metamorphosed_server = "metamorphosed.server:main"
iaa = "metamorphosed.inter_annotator:main"
validate = "metamorphosed.amrdoc:main"


[tool.setuptools.packages.find]
include = ["metamorphosed", "metamorphosed.gui", "metamorphosed.gui.img", "coref"]

#[tool.setuptools.package-data]
#data = ["*.txt", "*.yml"]

[project.urls]
Homepage = "https://github.com/Orange-Opensource/metamorphosed.git"






[tool.setuptools.dynamic]
version = {attr = "metamorphosed.amreditor.VERSION"} 

#[tool.hatch.version]
#path = "metamorphosed/amreditor.py"

#[tool.hatch.build.targets.sdist]
#include = [
#    "/metamorphosed",
#]

[tool.poetry]
name = "metamorphosed"
version = "4.3.0"
description = "editor for Abstract Meaning Representation files"
authors = ["Johannes Heinecke <johannes.heinecke@orange.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
#python = "3.12"
Penman = "1.3.0"
Flask-Cors = "4.0.2"
Flask = "3.0.2"
GitPython = "3.1.42"
graphviz = "0.20.1"
PyYAML = "6.0.1"
requests = "2.32.3"
smatchpp = "1.7.0"
werkzeug = "3.0.6"
rdflib = "7.0.0"
oxrdflib = "^0.4.0"

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
tox = "^4.23.2"

