#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"

[build-system]
requires = ["setuptools >=  59.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metamorphosed"
dynamic = ["version"]
description = "A graphical Abstract Meaning Represention Editor"
readme = "README.md"
license = { file ="LICENSE" }
requires-python = "<4.0.0,>=3.12"
authors = [
    { name = "Johannes Heinecke", email = "johannes.heinecke@orange.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause License",
    "Programming Language :: Python :: 3.10",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "Flask-Cors==6.0.0",
    "Flask==3.1.3",
    "GitPython==3.1.42",
    "graphviz==0.20.1",
    "Penman==1.3.0",
    "pytest==7.4.0",
    "PyYAML==6.0.1",
    "requests==2.32.4",
    "smatchpp==1.7.0",
    "werkzeug==3.1.5",
    "rdflib (==7.1.4)",
    "tox>=4.26.0",
    "oxrdflib>=0.4.0",
    "selenium>=4.33.0",
]

[project.scripts]
metamorphosed_server = "metamorphosed.server:main"
iaa = "metamorphosed.inter_annotator:main"
validate = "metamorphosed.amrdoc:main"


[tool.setuptools.packages.find]
include = ["metamorphosed", "metamorphosed.gui", "metamorphosed.gui.img", "coref"]

#[tool.setuptools.package-data]
#data = ["*.txt", "*.yml"]

[project.urls]
Homepage = "https://github.com/Orange-Opensource/metamorphosed.git"



[tool.setuptools.dynamic]
version = {attr = "metamorphosed.amreditor.VERSION"} 


